--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.1.5",
+    "@tanstack/react-query": "^5.53.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "viem": "^2.21.0",
+    "wagmi": "^2.12.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
