--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.53.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.12",
     "viem": "^2.21.0",
