--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@reclaimprotocol/js-sdk": "^1.3.11",
     "@tanstack/react-query": "^5.53.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qrcode-logo": "^3.0.0",
